--- a/A-Z/Grades/Final-Grades-Tool-copy.html
+++ b/A-Z/Grades/Final-Grades-Tool-copy.html
@@ -23,7 +23,7 @@
 </div>
 
 <blockquote style="padding-top: 10px; padding-bottom: 10px;"><em>
-        <span style="color: #34495e;">The Final grades menu has been developed by the UvA to help teachers calculate, communicate and share final grades in Canvas. Starting this academic year, the Final Grades tool will be used to push final grades from Canvas to SiS using Two-Factor Authentication. Read the instructions below to see how you can import final grades into this menu or how you can set up a final grade calculation using different partial grades. Last but not least, follow the instructions to see how you can publish grades to students and to the SiS-Administration.</span>
+        <span style="color: #34495e;">The Final grades menu has been developed by the UvA to help teachers calculate, communicate and share final grades in Canvas. Starting this academic year, the Final Grades tool will be used to push final grades from Canvas to SIS using Two-Factor Authentication. Read the instructions below to see how you can import final grades into this menu or how you can set up a final grade calculation using grades directly from Canvas (from the Gradebook).</span>
     </em></blockquote>
 
 <!-- Tab vakjes (aanklikbaar menu)-->
