--- a/Homepage/21_22_sept.html
+++ b/Homepage/21_22_sept.html
@@ -26,6 +26,28 @@
                         <span style="font-size: 17pt;">
                             <span style="color: #ffffff; font-size: 16pt;">
                                 <span style="color: #ffffff;"><em><strong></strong></em>
+                                    <span style="color: #000000; font-size: 16pt;">&nbsp; &nbsp;<span style="color: #7e8c8d;"><em>All Topics &nbsp; </em></span>
+                                    </span><em><strong> </strong></em>
+                                </span>
+                            </span><em> </em>
+                        </span>
+                    </a>
+                    <p style="text-align: left;">
+                        <span style="font-size: 18pt;">
+                            <a id="" class="Button Button--large" style="width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Overview of Online Tools" href="https://canvas.uva.nl/courses/8175/pages/a-z" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page">
+                                <img id="4534676" src="https://canvas.uva.nl/courses/8175/files/4541419/preview" alt="Search by Nasik Lababan from the Noun Project (edited by ICTO).png" width="44" data-api-returntype="File" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4541419" />
+                                <span style="color: #236fa1;">&nbsp;&nbsp; &nbsp;<span style="color: #000000;">A-Z</span>
+                                </span>
+                            </a>
+                            <span style="color: #236fa1;"> </span>
+                        </span>
+                    </p>
+                </div>
+                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #f1f1f1; padding: 30px; margin-bottom: 10px; text-align: left;">
+                    <a style="height: 100%; text-decoration: none; color: inherit;">
+                        <span style="font-size: 17pt;">
+                            <span style="color: #ffffff; font-size: 16pt;">
+                                <span style="color: #ffffff;"><em><strong></strong></em>
                                     <span style="color: #000000; font-size: 16pt;">&nbsp; &nbsp;<span style="color: #7e8c8d;"><em>Popular Topics &nbsp; </em></span>
                                     </span><em><strong> </strong></em>
                                 </span>
@@ -163,6 +185,10 @@
 
         <div class="col-xs-20 col-md-6">
 
+            <a title="course checklist" href="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/course-checklist" data-api-returntype="Page">
+                <img style="margin-top: 20px;" src="https://canvas.uva.nl/courses/8175/files/4322303/preview" alt="course checklist tegel (5).gif" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4322303" data-api-returntype="File" />
+            </a>
+
             <a title="Online and Hybrid teaching" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page">
                 <img style="margin-top: 20px;" id="5123509" src="https://canvas.uva.nl/courses/8175/files/5123509/preview" alt="Home-hybridbanner-2.jpg" />
             </a>
@@ -171,33 +197,7 @@
                 <img style="margin-top: 20px;" src="https://canvas.uva.nl/courses/8175/files/5123510/preview" alt="Home-finalgradesbanner-2.jpg"/>
             </a>
 
-            <a title="Back to TestVision" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals" data-api-returntype="Page">
-                <img style="margin-top: 20px;" src="https://canvas.uva.nl/courses/8175/files/5123515/preview" alt="Home-TVObanner2.jpg" />
-            </a>
-
             <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #f1f1f1; padding: 30px; margin-bottom: 10px; text-align: left;">
-                    <a style="height: 100%; text-decoration: none; color: inherit;">
-                        <span style="font-size: 17pt;">
-                            <span style="color: #ffffff; font-size: 16pt;">
-                                <span style="color: #ffffff;"><em><strong></strong></em>
-                                    <span style="color: #000000; font-size: 16pt;">&nbsp; &nbsp;<span style="color: #7e8c8d;"><em>All Topics &nbsp; </em></span>
-                                    </span><em><strong> </strong></em>
-                                </span>
-                            </span><em> </em>
-                        </span>
-                    </a>
-                    <p style="text-align: left;">
-                        <span style="font-size: 18pt;">
-                            <a id="" class="Button Button--large" style="width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Overview of Online Tools" href="https://canvas.uva.nl/courses/8175/pages/a-z" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page">
-                                <img id="4534676" src="https://canvas.uva.nl/courses/8175/files/4541419/preview" alt="Search by Nasik Lababan from the Noun Project (edited by ICTO).png" width="44" data-api-returntype="File" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4541419" />
-                                <span style="color: #236fa1;">&nbsp;&nbsp; &nbsp;<span style="color: #000000;">A-Z</span>
-                                </span>
-                            </a>
-                            <span style="color: #236fa1;"> </span>
-                        </span>
-                    </p>
-                </div>
 
                 <div class="styleguide-section__grid-demo-element">
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #f1f1f1; padding: 15px; padding-bottom: 40px; padding-top: 30px; text-align: left;">
