--- a/A-Z/Wiki_videos_lectures.html
+++ b/A-Z/Wiki_videos_lectures.html
@@ -34,7 +34,7 @@
 </div>-->
 
 <blockquote style="padding-top: 10px; padding-bottom: 10px;"><em>
-        <span style="color: #34495e;">There are so many online tools and hybrid resources available today, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span>
+        <span style="color: #34495e;">There are so many online tools and hybrid resources available these days, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span>
     </em></blockquote>
 
 <!--<blockquote style="margin-top: 20px; margin-bottom: 35px;"><span style="color: #34495e; font-size: 11pt;">There are so many online tools and hybrid resources available today, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span></blockquote>-->
@@ -151,7 +151,7 @@
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><p>Following new regulations, the maximum group size for lecture halls will be set to 75 people. Unfortunately, this brings new administrative challenges. So, how do you as a teacher decide who can attend the lectures?
+                    <li><p>If you want to set a maximum group size for lectures or tutorial groups, unfortunately, this brings new administrative challenges. How do you as a teacher decide/arrange who can attend the lectures?
                         <ol>
                             <li><a href="https://canvas.uva.nl/courses/8175/pages/self-enrollment-within-canvas">Create a self-enrollment system within Canvas</a></li>
                             <li><a href="https://tlc.uva.nl/en/article/student-selection-for-limited-available-seats/?faculty=54" target="_blank" rel="noopener">Use other tools or registration systems</a></li>
@@ -196,7 +196,7 @@
         <ul>
             <li style="list-style-type: none;">
                 <ul>
-                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls (some departments have furnished a few seminar rooms in a different way, but these are rare exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager). The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
+                    <li><em>The Brio is a webcam with an exceptionally good microphone, which has been installed in all seminar rooms and lecture halls. The BRIO functions well together with Zoom, serving as a livestream for your classes and lectures. Note: some departments have furnished a few seminar rooms in a different way, but these are rare exceptions. If in doubt, look at rooster.uva.nl to see if there's a 'Zoom' tag connected to the room, or contact your timetable manager. <a href="https://extranet.uva.nl/en/content/a-z/audio-and-video/extra-av-equipment/extra-av-equipment-corona.html?origin=gqokcNkiSwWPmbxGtNluow#Recommended-for-lecture-halls" target="_blank" rel="noopener">More Information offered by the Audio Visual Service of the REC.</a></em></li>
                     <li><p><strong>You do not need to book or reserve the BRIO</strong></p></li>
                     <li style="list-style-type: none;">
                         You just need to know how to start/connect the device to a laptop or computer:
