--- a/A-Z/course-checklist.html
+++ b/A-Z/course-checklist.html
@@ -29,7 +29,7 @@
 <p>&nbsp;</p>
 <p><a id="check1"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check2"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check2"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>1. Upload the studyguide</strong></h4>
@@ -56,7 +56,7 @@
 <p>&nbsp;</p>
 <p><a id="check2"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check1"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check3"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check1"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check3"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>2. Organize your Canvas course</strong></h4>
@@ -82,7 +82,7 @@
 <p>&nbsp;</p>
 <p><a id="check3"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check2"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check4"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check2"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check4"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>3. About Zoom &amp; Livestreaming</strong></h4>
@@ -117,7 +117,7 @@
 <p>&nbsp;</p>
 <p><a id="check4"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check3"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check5"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check3"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check5"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>4. Publish your course</strong></h4>
@@ -159,7 +159,7 @@
 <p>&nbsp;</p>
 <p><a id="check5"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check4"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a><a class="btn Button--primary" style="margin: 3px;" href="#check6"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check4"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a><a class="btn Button--primary" style="margin: 3px;" href="#check6"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>5. Send message(s) to students</strong></h4>
@@ -185,7 +185,7 @@
 <p>&nbsp;</p>
 <p><a id="check6"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check5"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check7"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check5"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button--primary" style="margin: 3px;" href="#check7"> <span>&nbsp;<em>Next</em> </span>&nbsp;<i class="icon-forward"></i> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>6. Create Assignments or Exams</strong></h4>
@@ -260,7 +260,7 @@
 <p>&nbsp;</p>
 <p><a id="check7"></a></p>
 <p>&nbsp;</p>
-<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check6"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
+<h5 style="text-align: center;"><a class="btn Button--primary" style="margin: 3px;" href="#check6"> <i class="icon-replied"></i> <span>&nbsp;<em>Previous</em></span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></h5>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4 style="text-align: center;"><strong>7. Manage grades</strong></h4>
