--- a/A-Z/Homepage.html
+++ b/A-Z/Homepage.html
@@ -18,7 +18,7 @@
                     <a class="btn Button" style="margin: 5px;" href="https://uvasocialsciences.eu.qualtrics.com/jfe/form/SV_6LN3bIFUlzyJ95k" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-compose"></i>
                         <span>&nbsp;</span>Send us your feedback
                     </a>
-                    <!--
+                    <!-- test dit is michael 
                     <br>
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades menu</strong></span></a>
                     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page"><span style="color: #EF5625;"><i class="icon-info"></i><strong>&nbsp;Online & Hybrid teaching</strong></span></a>
