updated show grades to students instruction

--- a/A-Z/Grades/Final_grades_official.html
+++ b/A-Z/Grades/Final_grades_official.html
@@ -3148,19 +3148,23 @@
             <tr style="height: 32px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
                 <td style="width: 89.5941%; border-style: hidden; height: auto;">
-                    <p>Please inform students to:</p>
                     <ol>
                         <li>
-                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Head over to 'Grades'</p>
+                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Go to <u>Course settings</u></p>
                         </li>
                         <li>
-                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Click on the <u>Show final grade</u> button at the top right</p>
+                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Click on the tab <u>Navigation</u></p>
                         </li>
                         <li>
-                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">All grades will now be visible</p>
+                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Drag and drop the menu <u>'MyGrades'</u> to the top with the menus available for students</p>
+                        </li>
+                        <li>
+                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Click on <u>'Save'</u></p>
+                        </li>
+                        <li>
+                            <p style="margin-bottom: 0in; color: #000000; line-height: 100%;" lang="nl-NL">Now, when you publish grades in Final Grades students can see their grade in the 'MyGrades' menu.</p>
                         </li>
                     </ol>
-                    <br /><img id="5105260" style="width: 100%; min-width: 350px;" src="https://canvas.uva.nl/courses/8175/files/5105260/preview" alt="FGTfinalgradesexplainer.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5105260" data-api-returntype="File" />
                     <p>&nbsp;</p>
                 </td>
             </tr>
