--- a/Homepage/21_22_sept.html
+++ b/Homepage/21_22_sept.html
@@ -198,6 +198,17 @@
                     </strong><em> </em>
                     <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
                         <span style="color: #3598db; font-size: 11pt;">
+                            <span style="color: #000000;"> <em>Sendsteps is nearing the end of its usage period (February 2022) </em></span>
+                            <br /><strong>
+                                <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/457602" data-api-endpoint="https://canvas.uva.nl/courses/8175/discussion_topics/457602" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
+                            </strong>
+                        </span>
+                        <span style="color: #95a5a6;">
+                            <span style="font-size: 9pt; float: right; padding-top: 3px;"><em>November 18, 2021</em></span>
+                        </span>
+                    </div>
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; padding: 15px;">
+                        <span style="color: #3598db; font-size: 11pt;">
                             <span style="color: #000000;"> <em>The 'Hybrid Learning Theatre' &ndash; Now available for bookings!</em></span>
                             <br /><strong>
                                 <a class="instructure_file_link inline_disabled" style="color: #3598db;" href="https://canvas.uva.nl/courses/8175/discussion_topics/387778" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/discussion_topics/387778" data-api-returntype="Discussion"><i class="icon-arrow-right"> &nbsp;Read more </i></a>
