--- a/A-Z/Grades/Final_grades_official.html
+++ b/A-Z/Grades/Final_grades_official.html
@@ -480,31 +480,8 @@
                         <p><span style="font-size: 11pt;"> <img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="22" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" /><em>&nbsp; &nbsp; Remove any pop-up blockers present in your URL search bar <a href="http://lexisnexis.custhelp.com/app/answers/answer_view/a_id/1102020/~/disable-pop-up-blockers-in-most-common-internet-browsers" target="_blank" rel="noopener">(view more)</a></em> </span></p>
                         <p>&nbsp;</p>
                         <p><strong> <span style="font-size: 13pt;">Submit grades</span> </strong></p>
-                        <p><span style="font-size: 13pt;"> <a href="#sis-guide">How to submit grades to SIS</a> </span></p>
-                        <p><span style="font-size: 13pt;"> <a href="#sis-correction">How to send corrections tot SiS</a> </span></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-12 col-md-12">
-            <div class="styleguide-section__grid-demo-element">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="padding: 30px; padding-top: 15px; padding-right: 20px; height: auto; background-color: #fcfcfc;">
-                    <div class="content-box" style="padding-right: 15px;">
-                        <p><strong> <span style="font-size: 13pt;">Contact</span> </strong></p>
-                        <p>&nbsp;</p>
-                        <p><em>If you have successfully submitted your grades to SIS, but there is an issue of some sort or if you have a question about your grades in SIS, please get in touch with the <span style="text-decoration: underline;">Registrar's office (Onderwijsadministratie)</span>.</em></p>
-                        <p>If you don't see a <span style="text-decoration: underline;">red Submit grades button</span>, please get in touch with your <span style="text-decoration: underline;">Programme Coordinator or Manager</span>. They can give you the 'Examiner' rights in SIS.&nbsp;</p>
-                        <p>&nbsp;</p>
-                        <p><strong>Summary of symbols:</strong></p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466444/preview" alt="CRA poppetje.JPG" width="45" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466444" data-api-returntype="File" /> <span>&nbsp;</span>= &nbsp;You cannot transfer grades for this student</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466443/preview" alt="CRA plus.JPG" width="40" height="37" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466443" data-api-returntype="File" /> <span>&nbsp;</span>=&nbsp; This student is not enrolled in SIS for this course.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466440/preview" alt="Melding Bewerkt
-    " width="70" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466440" data-api-returntype="File" />=&nbsp; This grade was imported from a file or entered or modified manually.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466445/preview" alt="symbool slot" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466445" data-api-returntype="File" />= This grade has been transferred to SIS but has not yet arrived in SIS.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466446/preview" alt="symbool vinkje" width="44" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466446" data-api-returntype="File" />= The final grade has been successfully transferred to SIS.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466442/preview" alt="Symbool dubbel vinkje" width="51" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466442" data-api-returntype="File" /> <span>&nbsp;</span>= The resit grade has been successfully transferred to SIS.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4776243/preview" alt="Symbool zandloper" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4776243" data-api-returntype="File" /> <span>&nbsp;</span>= The resit grade is currently being transferred to SIS.</p>
-                        <p><img src="https://canvas.uva.nl/courses/8175/files/4466439/preview" alt="CRA fout symbool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466439" data-api-returntype="File" />= Unfortunately, an error occurred during the transfer. You don't have to act on this error! The administration office will automatically receive a message and they will contact you if anything seems wrong. In most cases, this icon only indicates errors that are excepted</p>
+                        <p><span style="font-size: 13pt;"> <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-to-sis">How to submit grades to SIS</a> </span></p>
+                        <p><span style="font-size: 13pt;"> <a href="https://canvas.uva.nl/courses/8175/pages/final-grades-to-sis">How to send corrections tot SiS</a> </span></p>
                     </div>
                 </div>
             </div>
