--- a/A-Z/Grades/final_grades_to_sis.html
+++ b/A-Z/Grades/final_grades_to_sis.html
@@ -2,18 +2,11 @@
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/online-and-hybrid-tools"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Online &amp; Hybrid teaching</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades Tool</strong></span></a> <img style="width: auto; float: center; height: 30px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/5127882/preview" alt="2021:22.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5127882" data-api-returntype="File" /></div>
+            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i> <span>&nbsp;Home</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i> <span>&nbsp;A-Z</span> </a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/online-and-hybrid-tools"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Online &amp; Hybrid teaching</strong></span></a> <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool"><span style="color: #ef5625;"><i class="icon-info"></i><strong>&nbsp;Final Grades instructions</strong></span></a> <img style="width: auto; float: center; height: 30px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/5127882/preview" alt="2021:22.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5127882" data-api-returntype="File" /></div>
         </div>
     </div>
 </div>
 <h2 style="text-align: center;"><span style="color: #000000; margin-bottom: 55px; float: center;"> <img id="4570191" style="margin-left: auto; margin-right: auto;" src="https://canvas.uva.nl/courses/8175/files/4570191/preview" alt="noun_sis_3178955.png" width="29" height="36" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4570191" data-api-returntype="File" />&nbsp; &nbsp; How to submit final grades to SIS</span></h2>
-<!--<h3 style="text-align: center; margin-bottom: 15px;">
-    <span style="color: #333333;">
-        <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-copy-course"></i>
-            <span>&nbsp;Go back to Final Grades instructions</span>
-        </a>
-    </span>
-</h3>-->
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; padding: 2px 15px 15px 15px;">
     <div class="grid-row">
         <div class="col-xs-12 col-md-12">
@@ -25,8 +18,8 @@
                         <p><span style="font-size: 11pt;"> <img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="22" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" /><em>&nbsp; &nbsp; Remove any pop-up blockers present in your URL search bar <a href="http://lexisnexis.custhelp.com/app/answers/answer_view/a_id/1102020/~/disable-pop-up-blockers-in-most-common-internet-browsers" target="_blank" rel="noopener">(view more)</a></em> </span></p>
                         <p>&nbsp;</p>
                         <p><strong><span style="font-size: 13pt;">Contact</span></strong></p>
-                        <p><span style="font-size: 11pt;">If you don't see a <span style="text-decoration: underline;">red Submit grades button</span>, please get in touch with your <span style="text-decoration: underline;">Programme Coordinator or Manager</span>. They can give you the 'Examiner' rights in SIS.</span></p>
-                        <p><span style="font-size: 11pt;">If you have successfully submitted your grades to SIS, but there is an issue of some sort or if you have a question about your grades in SIS, please get in touch with the <span style="text-decoration: underline;">Registrar's office (Onderwijsadministratie)</span>.</span></p>
+                        <p><span style="font-size: 11pt;">If you don't see a <span style="text-decoration: underline;">red Submit grades button</span>, please get in touch with your <span style="text-decoration: underline;">Programme Coordinator or Manager</span>. They can give you the 'Examiner' rights in SIS. Please note that only the co&ouml;rdinator of the course can submit grades to SIS.&nbsp;</span></p>
+                        <p><span style="font-size: 11pt;">If you have successfully submitted your grades to SIS, but there is an issue of some sort or if you have a question about your grades in SIS, please get in touch with the <span style="text-decoration: underline;">Registrar's office</span> (<a class="inline_disabled" href="mailto:gradeadmin-sw@uva.nl" target="_blank" rel="noopener">gradeadmin-sw@uva.nl</a>).</span></p>
                         <p>&nbsp;</p>
                         <p><strong><span style="font-size: 13pt;">Summary of symbols</span></strong></p>
                         <p><span style="font-size: 11pt;"><em>These symbols may appear after you're done or during the progress: <br /></em></span></p>
@@ -34,11 +27,11 @@
                         <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466443/preview" alt="CRA plus.JPG" width="40" height="37" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466443" data-api-returntype="File" /> &nbsp;=&nbsp; This student is not enrolled in SIS for this course.</span></p>
                         <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466440/preview" alt="Melding Bewerkt
     " width="70" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466440" data-api-returntype="File" />=&nbsp; This grade was imported from a file or entered or modified manually.</span></p>
-                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466445/preview" alt="symbool slot" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466445" data-api-returntype="File" />= This grade has been transferred to SIS but has not yet arrived in SIS.</span></p>
+                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466445/preview" alt="symbool slot" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466445" data-api-returntype="File" />= This grade has been transferred to SIS but has not yet arrived in SIS. In some cases, this icon indicates that the grade list has not been signed yet. You can find the unsigned list at the bottom right in the Final Grades menu. Click on the list and complete the session by clicking on "Sign grade list using two-factor authentication"</span></p>
                         <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466446/preview" alt="symbool vinkje" width="44" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466446" data-api-returntype="File" />= The final grade has been successfully transferred to SIS.</span></p>
                         <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466442/preview" alt="Symbool dubbel vinkje" width="51" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466442" data-api-returntype="File" /> &nbsp;= The resit grade has been successfully transferred to SIS.</span></p>
-                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4776243/preview" alt="Symbool zandloper" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4776243" data-api-returntype="File" /> &nbsp;= The resit grade is currently being transferred to SIS.</span></p>
-                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466439/preview" alt="CRA fout symbool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466439" data-api-returntype="File" />= Unfortunately, an error occurred during the transfer. You don't have to act on this error! The administration office will automatically receive a message and they will contact you if anything seems wrong. In most cases, this icon only indicates errors that are excepted</span></p>
+                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4776243/preview" alt="Symbool zandloper" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4776243" data-api-returntype="File" /> &nbsp;= The grade is currently being transferred to SIS.</span></p>
+                        <p><span style="font-size: 11pt;"><img src="https://canvas.uva.nl/courses/8175/files/4466439/preview" alt="CRA fout symbool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4466439" data-api-returntype="File" />= Unfortunately, an error occurred during the transfer. You don't have to act on this error, the administration office will automatically receive a message and they will contact you if anything seems wrong. In most cases, this icon only indicates errors that are excepted</span></p>
                     </div>
                 </div>
             </div>
@@ -60,7 +53,7 @@
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 14pt;">&nbsp;</span> </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;">
                     <p><em>Wait for it to load, it may take some time.</em></p>
-                    <img id="5103271" style="width: 20%; min-width: 200px;" src="https://canvas.uva.nl/courses/8175/files/5103271/preview" alt="finalgradesmenu.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5103271" data-api-returntype="File" /> <br />
+                    <img id="5103271" style="width: 20%; min-width: 200px;" src="https://canvas.uva.nl/courses/8175/files/5103271/preview" alt="finalgradesmenu.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5103271" data-api-returntype="File" />
                 </td>
             </tr>
             <tr style="height: 45px;">
@@ -172,6 +165,7 @@
         </tbody>
     </table>
 </div>
+<p><a id="correction"></a></p>
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <h4><strong>Send corrections to SiS</strong></h4>
@@ -204,7 +198,7 @@
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
                 <td style="width: 89.5941%; border-style: hidden;">
-                    <p><em>Note: this column appears after completing step 1.</em></p>
+                    <p><em>Note: this column appears after completing step 2.</em></p>
                     <p>&nbsp;</p>
                 </td>
             </tr>
@@ -225,7 +219,7 @@
             <tr>
                 <td style="width: 10.4059%; border-style: hidden;"><span style="font-size: 14pt;"><strong>&nbsp;</strong></span></td>
                 <td style="width: 89.5941%; border-style: hidden;"><img id="5307481" style="width: 30%; min-width: 200px;" src="https://canvas.uva.nl/courses/8175/files/5307481/preview" alt="submitgradesbutton.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5307481" data-api-returntype="File" /><br />
-                    <p>Note: you are in the so-called "correction mode" after performing step 1. This will affect the process of submitting grades to SiS, meaning you'll only push the newly corrected grade(s). Therefore, we advise you to do the above steps for all corrections in one go.</p>
+                    <p>Note: you are in the so-called "correction mode" after performing step 2. This will affect the process of submitting grades to SiS, meaning you'll only push the newly corrected grade(s). Therefore, we advise you to do the above steps for all corrections in one go.</p>
                 </td>
             </tr>
         </tbody>
