--- a/CCSi/Homepage_2.html
+++ b/CCSi/Homepage_2.html
@@ -50,7 +50,7 @@
         <li>
             <a href="#tab-0" style="background-color: #ffffff;">
                 <div class="content-box" style="margin: 5px; height: 35px; border: #000000;">
-                    <span style="font-size: 12pt;">CSSi</span>
+                    <span style="font-size: 12pt;">CSSci</span>
                 </div>
             </a>
         </li>
@@ -71,21 +71,22 @@
     </ul>
 
     <div id="tab-0" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
+
         <a id="" class="Button Button--large" style="width: 90%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/32823/pages/semester-guide" target="https://canvas.uva.nl/courses/32823/pages/semester-guide" data-api-endpoint="https://canvas.uva.nl/courses/32823/pages/semester-guide" data-api-returntype="Page">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester guide</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
+            <h5><span style="font-size: 14pt; color: #124240;"><strong>Semester guide</strong></span></h5>
+            <span style="font-size: 10pt; color: #8fa674;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
         </a>
         <a id="" class="Button Button--large" style="width: 90%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/32823/pages/weekly-schedule" target="https://canvas.uva.nl/courses/32823/pages/weekly-schedule" data-api-endpoint="https://canvas.uva.nl/courses/32823/pages/weekly-schedule" data-api-returntype="Page">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
+            <h5><span style="font-size: 14pt; color: #124240;"><strong>Weekly schedule</strong></span></h5>
+            <span style="font-size: 10pt; color: #8fa674;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
         </a>
         <a id="" class="Button Button--large" style="width: 90%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/32823/pages/practical-matters" target="https://canvas.uva.nl/courses/32823/pages/practical-matters" data-api-endpoint="https://canvas.uva.nl/courses/32823/pages/practical-matters" data-api-returntype="Page">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">Practical matters</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>FAQ. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</em></span>
+            <h5><span style="font-size: 14pt; color: #124240;"><strong>Practical matters</strong></span></h5>
+            <span style="font-size: 10pt; color: #8fa674;"><em>FAQ. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</em></span>
         </a>
         <a id="" class="Button Button--large" style="width: 90%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 30px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/32823/pages/apa-reference-style" target="https://canvas.uva.nl/courses/32823/pages/apa-reference-style" data-api-endpoint="https://canvas.uva.nl/courses/32823/pages/apa-reference-style" data-api-returntype="Page">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">APA Reference Style</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
+            <h5><span style="font-size: 14pt; color: #124240;"><strong>APA Reference Style</strong></span></h5>
+            <span style="font-size: 10pt; color: #8fa674;"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em></span>
         </a>
     </div>
 
