--- a/CCSi/Homepage.html
+++ b/CCSi/Homepage.html
@@ -50,7 +50,7 @@
         <li>
             <a href="#tab-0" style="background-color: #ffffff;">
                 <div class="content-box" style="margin: 5px; height: 35px; border: #000000;">
-                    <span style="font-size: 12pt;">CSSi</span>
+                    <span style="font-size: 12pt;">CSSci</span>
                 </div>
             </a>
         </li>
