Nieuwe homepage (tijdelijk zonder nieuwsbrief) + nieuwe A-Z pagina

--- a/Homepage/22_23_zonder-nieuwsbrief.html
+++ b/Homepage/22_23_zonder-nieuwsbrief.html
@@ -29,7 +29,7 @@
         <!-- Topics -->
         <div class="col-xs-20 col-md-6">
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; margin-bottom: 10px; text-align: left;">
+                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 48px; margin-bottom: 10px; text-align: left;">
 
                     <!-- Topics -->
                     <h5><span style="font-size: 18pt;">Topics</span></h5>
@@ -88,28 +88,28 @@
                         <!-- einde -->
 
                     </span>
-
                 </div>
             </div>
         </div>
 
-        <!-- New in 2021/22 -->
+        <!-- Rechterzijde -->
         <div class="col-xs-20 col-md-6">
+
+            <!-- Nieuwbrief -->
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
 
                     <span style="float: middle; font-size: 18pt; align: center;">
 
-                        New in <img style="width: auto; float: center; height: 30px; vertical-alignment: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105590/preview" alt="2223.png" width="109" height="30" />
+                        <em>Coming up</em> <img style="width: auto; float: center; height: 30px; vertical-alignment: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105590/preview" alt="2223.png" width="100" />
 
                         <!-- Newsletter -->
-                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/online-and-hybrid-tools" data-api-returntype="Page">
+                        <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;">
                             <h5><span style="font-size: 15pt; color: #014AAD;"><strong>ICTO NEWSLETTER</strong></span></h5>
                             <span style="font-size: 11pt; color: #34495e;"><em>Edition: September 2022, Block 1</em></span>
                         </a>
 
                     </span>
-
                 </div>
             </div>
 
@@ -142,7 +142,9 @@
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
                     <span style="float: middle; font-size: 18pt; align: center;">
+
                         Explore
+
                         <br>
                         <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; title="" href="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-returntype="Page">
                             <h5><span style="font-size: 14pt; color: #014AAD;">Course checklist</span></h5>
