--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -38,14 +38,14 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box" style="background-color: #F8F8F8; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
+                        <div class="content-box" style="border-color: #BFCEE1; background-color: #E0E7F1; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
                             <p style="text-align: left;">
                                 <span style="line-height: 180%; font-size: 21pt; float: middle; color: #014AAD;">&nbsp; &nbsp; Topics A-Z</span>
                             </p>
                         </div>
 
                         <!-- Box -->
-                        <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; padding: 15px;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #E6EBED; padding: 15px;">
 
                             <!-- Properties alle buttons-->
                             <span style="color: #236fa1; font-size: 14pt; text-align: left;">
@@ -162,14 +162,14 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box" style="background-color: #F8F8F8; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
+                        <div class="content-box" style="border-color: #BFCEE1; background-color: #E0E7F1; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
                             <p style="text-align: left;">
                                 <span style="line-height: 180%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Tools A-Z</span>
                             </p>
                         </div>
 
                         <!-- Box -->
-                        <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; padding: 15px;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #E6EBED; padding: 15px;">
 
                             <!-- Atlas.ti -->
                             <p>
