Wijzigingen voor 22-23 + Final Grades HTML verbeterd met comments

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -38,9 +38,9 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box" style="border-color: #BFCEE1; background-color: #E0E7F1; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #BFCEE1; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
                             <p style="text-align: left;">
-                                <span style="line-height: 180%; font-size: 21pt; float: middle; color: #014AAD;">&nbsp; &nbsp; Topics A-Z</span>
+                                <span style="line-height: 100%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Topics A-Z</span>
                             </p>
                         </div>
 
@@ -162,9 +162,9 @@
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
 
                         <!-- Titel -->
-                        <div class="content-box" style="border-color: #BFCEE1; background-color: #E0E7F1; border: 1px solid grey; height: 80px; text-align: center; width: auto;">
+                        <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #BFCEE1; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
                             <p style="text-align: left;">
-                                <span style="line-height: 180%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Tools A-Z</span>
+                                <span style="line-height: 100%; font-size: 21pt; float: middle; text-align: center; color: #014AAD;">&nbsp; &nbsp; Tools A-Z</span>
                             </p>
                         </div>
 
