--- a/A-Z/Online&Hybrid/Online&Hybrid_22-23.html
+++ b/A-Z/Online&Hybrid/Online&Hybrid_22-23.html
@@ -34,7 +34,7 @@
 </div>-->
 
 <blockquote style="padding-top: 10px; padding-bottom: 10px;"><em>
-        <span style="color: #34495e;">There are so many online tools and hybrid resources available these days, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span>
+        <span style="color: #34495e;">There are so many online tools and hybrid resources available these days, we understand it's hard to keep track. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span>
     </em></blockquote>
 
 <!--<blockquote style="margin-top: 20px; margin-bottom: 35px;"><span style="color: #34495e; font-size: 11pt;">There are so many online tools and hybrid resources available today, we understand it's hard to keep track of it all. Below we provide a brief overview so you know how to access, book and reserve all of these resources. Please note that many of the services listed below are not offered by ICTO, we're just trying to help!</span></blockquote>-->
