--- a/Nieuwsbrief_1/Nieuwsbrief22-23.html
+++ b/Nieuwsbrief_1/Nieuwsbrief22-23.html
@@ -89,7 +89,7 @@
             <td style="width:23%;vertical-align:top;padding:10px">
                 <b>Maaike de Hart</b>
                 <br><i>Team member ICTO
-                    <br>Working days: mo - thu (partly at POW)</i>
+                    <br>Working days: mo - thu (partially at POW)</i>
             </td>
             <!-- Piotr -->
             <td style="width:10%">
