kleine aanpassing nieuwsbrief + contact

--- a/Nieuwsbrief/Nieuwsbrief22-23.html
+++ b/Nieuwsbrief/Nieuwsbrief22-23.html
@@ -124,7 +124,7 @@
             <td style="width:85%; vertical-align:top">
                 <h3><strong>What's new?</strong></h3>
                 <p style="font-size: 12pt">
-                    <b>Find Out What's New In: the digital examination process with TestVision, about a new tool called Impact that you can find in Canvas, read more about sharing videos with teachers or students using Kaltura, or discover the undelete function in Canvas that saves your deleted course content such as assignments and discussion.</b>
+                  <b>In <i>What's new?</i> you'll get all kinds of exclusive ICTO-related information. This time, you can read about the changes in the digital examination process, and you'll get the inside scoop on a new Canvas tool called <i>Impact</i>. Additionally, you can learn about all new possibilities of sharing videos in Kaltura with other teachers and your students. Or... discover <i>the</i> way of undeleting Canvas course content!</b>
                 </p>
             </td>
             <td style="width:auto%;">
